# easysmtp

./: pyproject.toml
src/: easysmtp.py
