[project]
name = "easysmtp"
version = "0.1.0"
description = "A simple SMTP client."
authors = [
    {name = "Inpool", email = "inpool@126.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pdm]
distribution = true

[tool.ruff]
line-length = 120

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]
