[project]
name = "easysmtp"
version = "0.1.5"
description = "A simple SMTP client."
authors = [
    {name = "Inpool", email = "inpool@126.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "BSD-3-Clause"}
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
urls.Source = "https://github.com/inpool/easysmtp"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pdm]
distribution = true

[tool.ruff]
line-length = 120

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]
